# abraar-trading-bot

./: .gitignore  README.md
Trading/: CMakeList.txt  CMakeLists.txt  Trading.sln  Trading.vcxproj  Trading.vcxproj.filters  vcpkg.json
Trading/src/: AlpacaConfig.cpp  AlpacaConfig.h  AlpacaEndpoint.cpp  Audit.cpp  CMakeList.txt  CMakeLists.txt  OrderManager.cpp  main.cpp
TradingBot/: TradingBot.sln  TradingBot.vcxproj
trad-bot/: pom.xml
trad-bot/src/main/java/org/example/app/: App.java  AppOld.java  CliOptions.java  Config.java
trad-bot/src/main/java/org/example/backtest/: AlpacaDataHandler.java  BacktestEngine.java  BasicPortfolio.java  DataHandler.java  EventInterfaces.java  ExecutionHandler.java  Portfolio.java  SimulatedExecutionHandler.java  SmaCrossoverBacktestStrategy.java  Strategy.java
trad-bot/src/main/resources/: log4j2.xml
trading-bot/: pom.xml
trading-bot/src/main/java/com/tradingbot/: TradingBotApplication.java
trading-bot/src/main/java/com/tradingbot/alpaca/: AlpacaService.java
trading-bot/src/main/java/com/tradingbot/backtesting/: BacktestController.java  BacktestResult.java  BacktestingService.java
trading-bot/src/main/java/com/tradingbot/config/: AppConfig.java
trading-bot/src/main/java/com/tradingbot/events/: MarketDataEvent.java  SignalEvent.java
trading-bot/src/main/java/com/tradingbot/scheduler/: MarketDataPoller.java
trading-bot/src/main/java/com/tradingbot/services/: OrderExecutionService.java  SignalGeneratorService.java
trading-bot/src/main/resources/: application.properties
(+10 files in other folders)
